# hcb

./: .gitattributes  LICENSE  README.md  justfile  pyproject.toml
scripts/: codegen.py
src/hcb/: __init__.py  core.py  requests.py
